--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
