--- a/.github/workflows/main_bodeguita-backend.yml
+++ b/.github/workflows/main_bodeguita-backend.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - bodeguita-backend
+name: Build and deploy Node.js app to Azure Web App - system-sales-backend
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -21,24 +21,25 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
-      
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -48,19 +49,23 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A0AA25BCC13740CABEFD667CB2C3B84B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_83BF75BDAC184F338CA74D9EF5B5754D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F44DEFB1E0A94CF28F4F8F66B5E95B35 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_641EB35D8C254F6DA194CA58F0DEBE43 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_372C4401C57945C2944CB4141C29E64D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4AF1015D36DF4BF0A45E53649A4BD0AF }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
-          app-name: 'bodeguita-backend'
+          app-name: 'system-sales-backend'
           slot-name: 'Production'
           package: .
+
           
