--- a/.github/workflows/main_bodeguita-backend.yml
+++ b/.github/workflows/main_bodeguita-backend.yml
@@ -1,19 +1,23 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
- 
-name: Build and deploy Node.js app to Azure Web App - system-sales-backend
- 
+
+name: Build and deploy Node.js app to Azure Web App - bodeguita-backend
+
 on:
   push:
     branches:
       - main
   workflow_dispatch:
 
+concurrency:
+  group: deploy-to-bodeguita-backend
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +33,7 @@ jobs:
           npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: powershell -Command "Compress-Archive -Path * -DestinationPath release.zip"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -41,8 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -52,7 +56,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -60,12 +64,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_83BF75BDAC184F338CA74D9EF5B5754D }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F44DEFB1E0A94CF28F4F8F66B5E95B35 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'bodeguita-backend'
           slot-name: 'Production'
           package: .
-
-          
