--- a/.github/workflows/main_system-sales-backend.yml
+++ b/.github/workflows/main_system-sales-backend.yml
@@ -13,6 +13,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write   # ⬅️ NECESARIO para OIDC login con azure/login
+      contents: read    # ⬅️ Necesario para actions/checkout
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
